welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: method move has return statement; needs result type
    return for (i <- 1 to nbPas) { avance(); };
    ^Program:6: error: method move has return statement; needs result type
  return for (i2 <- 1 to 6-nbPas) { avance(); }; } 
  ^